arc/vm/libvda/rust/src/bindings.rs

pub type picture_ready_event_data_t = picture_ready_event_data;
#[repr(C)]
#[derive(Copy, Clone)]
pub union vda_event_data {
    pub provide_picture_buffers: provide_picture_buffers_event_data_t,
    pub picture_ready: picture_ready_event_data_t,
    pub bitstream_id: i32,
    pub result: vda_result_t,
    _bindgen_union_align: [u32; 6usize],
}
#[test]
fn bindgen_test_layout_vda_event_data() {
    assert_eq!(
        ::std::mem::size_of::<vda_event_data>(),
        24usize,
        concat!("Size of: ", stringify!(vda_event_data))
    );
    assert_eq!(
        ::std::mem::align_of::<vda_event_data>(),
        4usize,
        concat!("Alignment of ", stringify!(vda_event_data))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vda_event_data>())).provide_picture_buffers as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event_data),
            "::",
            stringify!(provide_picture_buffers)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_event_data>())).picture_ready as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event_data),
            "::",
            stringify!(picture_ready)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_event_data>())).bitstream_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event_data),
            "::",
            stringify!(bitstream_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_event_data>())).result as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event_data),
            "::",
            stringify!(result)
        )
    );
}
pub type vda_event_data_t = vda_event_data;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vda_input_format {
    pub profile: vda_profile_t,
    pub min_width: u32,
    pub min_height: u32,
    pub max_width: u32,
    pub max_height: u32,
}
#[test]
fn bindgen_test_layout_vda_input_format() {
    assert_eq!(
        ::std::mem::size_of::<vda_input_format>(),
        20usize,
        concat!("Size of: ", stringify!(vda_input_format))
    );
    assert_eq!(
        ::std::mem::align_of::<vda_input_format>(),
        4usize,
        concat!("Alignment of ", stringify!(vda_input_format))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_input_format>())).profile as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_input_format),
            "::",
            stringify!(profile)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_input_format>())).min_width as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_input_format),
            "::",
            stringify!(min_width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_input_format>())).min_height as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_input_format),
            "::",
            stringify!(min_height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_input_format>())).max_width as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_input_format),
            "::",
            stringify!(max_width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_input_format>())).max_height as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_input_format),
            "::",
            stringify!(max_height)
        )
    );
}
pub type vda_input_format_t = vda_input_format;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct vda_event {
    pub event_type: vda_event_type_t,
    pub event_data: vda_event_data_t,
}
#[test]
fn bindgen_test_layout_vda_event() {
    assert_eq!(
        ::std::mem::size_of::<vda_event>(),
        28usize,
        concat!("Size of: ", stringify!(vda_event))
    );
    assert_eq!(
        ::std::mem::align_of::<vda_event>(),
        4usize,
        concat!("Alignment of ", stringify!(vda_event))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_event>())).event_type as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event),
            "::",
            stringify!(event_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_event>())).event_data as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_event),
            "::",
            stringify!(event_data)
        )
    );
}
pub type vda_event_t = vda_event;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vda_capabilities {
    pub num_input_formats: usize,
    pub input_formats: *const vda_input_format_t,
    pub num_output_formats: usize,
    pub output_formats: *const vda_pixel_format_t,
}
#[test]
fn bindgen_test_layout_vda_capabilities() {
    assert_eq!(
        ::std::mem::size_of::<vda_capabilities>(),
        32usize,
        concat!("Size of: ", stringify!(vda_capabilities))
    );
    assert_eq!(
        ::std::mem::align_of::<vda_capabilities>(),
        8usize,
        concat!("Alignment of ", stringify!(vda_capabilities))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vda_capabilities>())).num_input_formats as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_capabilities),
            "::",
            stringify!(num_input_formats)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_capabilities>())).input_formats as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_capabilities),
            "::",
            stringify!(input_formats)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<vda_capabilities>())).num_output_formats as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_capabilities),
            "::",
            stringify!(num_output_formats)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_capabilities>())).output_formats as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_capabilities),
            "::",
            stringify!(output_formats)
        )
    );
}
pub type vda_capabilities_t = vda_capabilities;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct vda_session_info {
    pub ctx: *mut ::std::os::raw::c_void,
    pub event_pipe_fd: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_vda_session_info() {
    assert_eq!(
        ::std::mem::size_of::<vda_session_info>(),
        16usize,
        concat!("Size of: ", stringify!(vda_session_info))
    );
    assert_eq!(
        ::std::mem::align_of::<vda_session_info>(),
        8usize,
        concat!("Alignment of ", stringify!(vda_session_info))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_session_info>())).ctx as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_session_info),
            "::",
            stringify!(ctx)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<vda_session_info>())).event_pipe_fd as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(vda_session_info),
            "::",
            stringify!(event_pipe_fd)
        )
    );
}
pub type vda_session_info_t = vda_session_info;
extern "C" {
    pub fn initialize(impl_type: vda_impl_type_t) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn deinitialize(impl_: *mut ::std::os::raw::c_void);
}
extern "C" {
    pub fn get_vda_capabilities(impl_: *mut ::std::os::raw::c_void) -> *const vda_capabilities_t;
}
extern "C" {
    pub fn init_decode_session(
        impl_: *mut ::std::os::raw::c_void,
        profile: vda_profile_t,
    ) -> *mut vda_session_info_t;
}
extern "C" {
    pub fn close_decode_session(
        impl_: *mut ::std::os::raw::c_void,
        session_info: *mut vda_session_info_t,
    );
}
extern "C" {
    pub fn vda_decode(
        ctx: *mut ::std::os::raw::c_void,
        bitstream_id: i32,
        fd: ::std::os::raw::c_int,
        offset: u32,
        bytes_used: u32,
    ) -> vda_result_t;
}
extern "C" {
    pub fn vda_set_output_buffer_count(
        ctx: *mut ::std::os::raw::c_void,
        num_output_buffers: usize,
    ) -> vda_result_t;
}
extern "C" {
    pub fn vda_use_output_buffer(
        ctx: *mut ::std::os::raw::c_void,
        picture_buffer_id: i32,
        format: vda_pixel_format_t,
        fd: ::std::os::raw::c_int,
        num_planes: usize,
        planes: *mut video_frame_plane_t,
    ) -> vda_result_t;
}
extern "C" {
    pub fn vda_flush(ctx: *mut ::std::os::raw::c_void) -> vda_result_t;
}
extern "C" {
    pub fn vda_reset(ctx: *mut ::std::os::raw::c_void) -> vda_result_t;
}
